# sapiens-inference

./: README.md  model_downloader.py  pyproject.toml  requirements.txt
sapiens_inference/: pose_inference.py  pose_util.py
